Fixed cohorts show more/less button, fixed cohorts list table select errors

--- a/blink_sass/_button.sass
+++ b/blink_sass/_button.sass
@@ -29,6 +29,11 @@
 .btn-link
   font-weight: $regular-font-weight
 
+.btn-oval
+  border-radius: 50%
+  width: 36px
+  height: 36px
+
 .lines-button
   display: inline-block
   padding: $button-size/2 $button-size/4
