--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -167,8 +167,9 @@
 
     <div id="content-panel" class="col-md-12">
         <div class="selected-filters panel panel-default" style="display:none;">
-            <div class="panel-heading">
-                <h4>New Filters <a role="button" id="clear-filters">Clear All</a></h4>
+            <div class="panel-heading clearfix">
+                <h4 class="panel-title pull-left">New Filters </h4>
+                <a class="pull-right" role="button" id="clear-filters">Clear All</a>
             </div>
             <div class="panel-body">
 
@@ -222,8 +223,8 @@
                 <div class="spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
                 <div id="tree-graph-clinical"></div>
             </div>
-            <div id="more-graphs"><button class="btn btn-default" role="button">Show More</button></div>
-            <div id="less-graphs" style="display: none;"><button class="btn btn-default" role="button">Show Less</button></div>
+            <div id="more-graphs"><button class="btn btn-link" role="button">Show More</button></div>
+            <div id="less-graphs" style="display: none;"><button class="btn btn-link" role="button">Show Less</button></div>
         </div>
         <div class="parallel-sets panel">
             <div class="panel-heading">
