--- a/templates/cohorts/cohort_list.html
+++ b/templates/cohorts/cohort_list.html
@@ -9,8 +9,8 @@
     Cohorts | ISB-CGC
 {% endblock %}
 
-{% block link_page_name %}corhorts-list{% endblock %}
-{% block page_name %}corhorts-list{% endblock %}
+{% block link_page_name %}cohorts-list{% endblock %}
+{% block page_name %}cohorts-list{% endblock %}
 
 {% block page_header %}
     <ol class="breadcrumb">
