--- a/blink_sass/cohorts.sass
+++ b/blink_sass/cohorts.sass
@@ -80,16 +80,16 @@
             overflow-y: scroll
 
     .selected-filters
-        .panel-heading a
-            font-size: 13px
-            font-weight: normal
-            text-align: right
-            display: block
-            margin-top: -16px
-            cursor: pointer
-        .panel-body span
-            display: inline-block
-            margin: 10px 0px
+        //.panel-heading a
+        //    font-size: 13px
+        //    font-weight: normal
+        //    text-align: right
+        //    display: block
+        //    margin-top: -16px
+        //    cursor: pointer
+        //.panel-body span
+        //    display: inline-block
+        //    margin: 10px 0px
 
     .clinical-trees
         .panel-body
@@ -120,22 +120,13 @@
             .graph-title
                 text-align: center
 
-        #more-graphs
+        #more-graphs, #less-graphs
             width: 100%
-            height: 0px
+            height: 36px
             position: relative
             button
-                left: 45%
-                margin-top: -15px
-                position: absolute
-                z-index: 20
-        #less-graphs
-            width: 100%
-            height: 0px
-            position: relative
-            button
-                left: 45%
-                margin-top: -15px
+                left: 50%
+                transform: translateX(-50%)
                 position: absolute
                 z-index: 20
 
