added tabs for cohorts list page

--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -31,23 +31,23 @@
         <li><a href="{% url 'dashboard' %}">Your Dashboard</a></li>
         <li><a href="{% url 'cohort_list' %}">Saved Cohorts</a></li>
     </ol>
-    <h1 class="page-header">{{ cohort.name }}</h1>
+    <h1 class="page-header">{{ cohort.name }} </h1>
 
     <div class="page-action-group">
-        {% if cohort.perm.perm != 'OWNER' %}
-            <span>Owner: {{ cohort.owner }}</span>
-        {% endif %}
 
         <ul id="default-cohort-menu">
+            {% if cohort.perm.perm != 'OWNER' %}
+                <li class="menu-item"><h4>Owner: {{ cohort.owner }}</h4></li>
+                <li class="separator"></li>
+            {% endif %}
             <li class="menu-item"><a href="" class="btn btn-default">New Workbook</a></li>
             <li class="separator"></li>
             {% if cohort.perm.perm == 'OWNER' %}
-                <li class="menu-item"><button class="btn btn-primary" id="add-filter-btn">Edit</button> </li>
+                <li class="menu-item"><button class="btn btn-info" id="add-filter-btn">Edit</button> </li>
             {% endif %}
-            <li class="menu-item"><button class="show-flyout btn btn-primary" title="Show Comments">Comments</button></li>
-            <!-- TODO: duplicate is not working-->
-            <li class="menu-item"><a href="{% url 'clone_cohort' cohort.id %}" class="btn btn-primary">Duplicate</a></li>
-            <li class="menu-item"><button class="btn btn-primary" data-toggle="modal" data-target="#delete-cohort-modal">
+            <li class="menu-item"><button class="show-flyout btn btn-info" title="Show Comments">Comments</button></li>
+            <li class="menu-item"><a href="{% url 'clone_cohort' cohort.id %}" class="btn btn-info">Duplicate</a></li>
+            <li class="menu-item"><button class="btn btn-info" data-toggle="modal" data-target="#delete-cohort-modal">
                 {% if cohort.perm.perm == 'OWNER' %}
                     Delete
                 {% else %}
@@ -58,7 +58,7 @@
             {% if cohort.perm.perm == 'OWNER' %}
             <li class="menu-item"><button class="btn btn-info" data-toggle="modal" data-target="#share-cohort-modal">Share</button></li>
             {% endif %}
-            <li class="menu-item"><a href="" class="btn btn-link">Shared with (5)</a></li>
+            <li class="menu-item"><a data-target="#share-cohort-modal" data-toggle="modal" class="btn btn-link" id="shared-with-btn" {% if shared_with_users|length < 1 %}disabled{% endif %}>Shared with ({{ shared_with_users|length}})</a></li>
         </ul>
         <ul id="edit-cohort-menu" style="display: none">
             {% if cohort.perm.perm == 'OWNER' %}
@@ -204,7 +204,8 @@
                     {% endfor %}
                 </ul>
                 {% if shared_with_users and cohort.perm == 'OWNER'%}
-                    <h4>Shared With Users:</h4>
+                    <br>
+                    <p><strong>Shared With Users:</strong></p>
                     <ul>
                     {% for user in shared_with_users %}
                         <li>{{ user.first_name }} {{ user.last_name }} [{{ user.email }}]</li>
@@ -261,34 +262,68 @@
         </div>
     </div>
 
-    {% if cohort.perm.perm == 'OWNER' %}
+
     <!-- Share Cohort Modal -->
     <div class="modal fade" id="share-cohort-modal" tabindex="-1" role="dialog" aria-labelledby="shareCohortModal" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="shareCohortModal">Share Cohort</h4>
+                    <h4 class="modal-title"></h4>
+                    <ul class="nav nav-tabs" role="tablist">
+                        {% if cohort.perm.perm == 'OWNER' %}
+                            <li role="presentation" class="active"><a data-target="#share-cohort-pane" data-toggle="tab" aria-controls="home" role="tab" id="shareCohortModal">Share Cohort</a></li>
+                        {% endif %} 
+                        <li role="presentation"><a data-target="#shared-pane" data-toggle="tab" aria-controls="home" role="tab" {% if shared_with_users|length < 1 %}disabled{% endif %} >Shared With ({{shared_with_users|length}})</a></li>
+                    </ul>
                 </div>
-                <form id="share-cohort-form" method="POST" action="{% url 'share_cohort' cohort.id %}">
-                    <div class="modal-body">
-                        <label for="selected-users">Please select users to share this cohort with:</label>
-                        <select name="users" id="selected-users" multiple="multiple">
-                            {% for user in users %}
-                            <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }} ({{ user.email }})</option>
-                            {% endfor %}
-                        </select>
 
+                <div class="tab-content">
+                    {% if cohort.perm.perm == 'OWNER' %}
+                    <div role="tabpanel" class="tab-pane active" id="share-cohort-pane">
+                        <form id="share-cohort-form" method="POST" action="{% url 'share_cohort' cohort.id %}">
+                            <div class="modal-body">
+                                <label for="selected-users">Please select users to share this cohort with:</label>
+                                <select name="users" id="selected-users" multiple="multiple" class="form-control">
+                                    {% for user in users %}
+                                    <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }} ({{ user.email }})</option>
+                                    {% endfor %}
+                                </select>
+
+                            </div>
+                            <div class="modal-footer">
+                                {% csrf_token %}
+                                <input type="submit" value="Share Cohort" class="btn btn-primary" />
+                            </div>
+                        </form>
                     </div>
-                    <div class="modal-footer">
-                        {% csrf_token %}
-                        <input type="submit" value="Share Cohort" class="btn btn-primary" />
+                    {% endif %}
+                    <div role="tabpanel" class="tab-pane" id="shared-pane">
+                        <div class="modal-body">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Name</th>
+                                        <th>Email</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                {% for user in shared_with_users %}
+                                    <tr>
+                                        <td>{{user.first_name}} {{user.last_name}}</td>
+                                        <td>{{user.email}}</td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
-                </form>
+                </div>
+
             </div>
         </div>
     </div>
-    {% endif %}
+
 
     <!-- Create Cohort Modal -->
     <div class="modal fade" id="create-cohort-modal" tabindex="-1" role="dialog" aria-labelledby="createCohortModal" aria-hidden="true">
