--- a/blink_sass/cohorts.sass
+++ b/blink_sass/cohorts.sass
@@ -137,12 +137,17 @@
         position: fixed
         width: 300px
         right: -300px
-        top: 118px
+        top: 71px
         bottom: 0px
         background-color: #fff
         border: $border
         margin-top: -16px
         z-index: 100
+
+        .menu-open &
+            top: 119px
+            transition: top 0.6s ease-in-out
+
         .flyout-heading
             border-bottom: $border
             padding: 0px 10px
