--- a/blink_sass/components/_header.sass
+++ b/blink_sass/components/_header.sass
@@ -3,7 +3,7 @@ body
 
 .menu-open
   padding-top: 50px
-  transition: all 0.4s ease-in
+  transition: all 0.4s ease-in-out
 
 .navbar-left
   float: left
