--- a/blink_sass/components/_modal.sass
+++ b/blink_sass/components/_modal.sass
@@ -17,7 +17,8 @@
     font-size: 16px
     color: $isb-primary
   &-body
-    padding: 0 24px
+    padding: 0 24px 15px
   &-footer
     padding: 10px 24px
     border-top: none
+    text-align: left
