--- a/static/templates/upload_file_list_item.html
+++ b/static/templates/upload_file_list_item.html
@@ -7,11 +7,8 @@
             <option value="" disabled selected hidden>-- Select Data Type --</option>
             <option value="protein">Protein Expression</option>
             <option value="methylation">DNA Methylation</option>
-            <option value="mirna_mirna">microRNA HiSeq</option>
-            <option value="mirna_isoform">microRNA Isoform HiSeq</option>
-            <option value="cnv">Copy Number Variation</option>
-            <option value="mrna_bcgsc">Gene Expression from BCGSC</option>
-            <option value="mrna_unc">Gene Expression from UNC</option>
+            <option value="mirna_mirna">microRNA</option>
+            <option value="mrna_bcgsc">Gene Expression</option>
             <option value="user_gen">Other</option>
         </select>
     </td>
