--- a/blink_sass/_button.sass
+++ b/blink_sass/_button.sass
@@ -34,6 +34,7 @@
   width: 36px
   height: 36px
 
+// hamburger button on the menu
 .lines-button
   display: inline-block
   padding: $button-size/2 $button-size/4
