--- a/blink_sass/basic.sass
+++ b/blink_sass/basic.sass
@@ -114,9 +114,7 @@ nav
 .container-fluid
     padding-bottom: 15px
 
-.form-control
-    border-radius: 1px
-    padding: 5px 10px
+
 
 
 
@@ -144,6 +142,9 @@ nav
 /********************************************
  * Handy Classes
  *******************************************/
+
+.center
+    text-align: center
 
 .inline-block
     display: inline-block
