--- a/templates/cohorts/cohort_list.html
+++ b/templates/cohorts/cohort_list.html
@@ -34,60 +34,106 @@
         </ul>
         <div class="tab-content panel-body ">
             <div role="tabpanel" class="tab-pane active" id="save-cohorts-list">
-                <div class="page-action-group">
-                    <button class="btn btn-default">New Workbook</button>
-                    <span class="separator"></span>
-                    <button id='delete-cohorts' type="button" class="btn btn-info" data-toggle="modal" data-target="#delete-cohorts-modal" aria-label="delete-cohorts" role="button" aria-expanded="true">
-                        <i class="fa fa-trash"></i>
-                        Delete
-                    </button>
-                    <button id="cohort-sets" type="button" class="btn btn-info" data-toggle="modal" data-target="#union-modal" aria-label="set-logic" role="button" aria-expanded="true">
-                        Set Operations
-                    </button>
-                    <button class="btn btn-info" id="share-cohorts-btn" type="button" data-toggle="modal" data-target="#share-cohorts-modal" aria-label="share-cohorts" role="button" aria-expanded="true">
-                        <i class="fa fa-share-alt"></i>
-                        Share
-                    </button>
-                </div>
-                {% if cohorts %}
+                {% if cohorts.has_private_cohorts %}
+                    <div class="page-action-group">
+                        <li role="menuitem"><button class="btn btn-default">New Workbook</button></li>
+                        <li class="separator"></li>
+                        <li role="menuitem">
+                            <button id='delete-cohorts' type="button" class="btn btn-info" data-toggle="modal" data-target="#delete-cohorts-modal" aria-label="delete-cohorts" role="button" aria-expanded="true">
+                                <i class="fa fa-trash"></i>
+                                Delete
+                            </button>
+                        </li>
+                        <li role="menuitem">
+                            <button id="cohort-sets" type="button" class="btn btn-info" data-toggle="modal" data-target="#union-modal" aria-label="set-logic" role="button" aria-expanded="true">
+                            Set Operations
+                            </button>
+                        </li>
+                        <li role="menuitem">
+                            <button class="btn btn-info" id="share-cohorts-btn" type="button" data-toggle="modal" data-target="#share-cohorts-modal" aria-label="share-cohorts" role="button" aria-expanded="true">
+                                <i class="fa fa-share-alt"></i>
+                                Share
+                            </button>
+                        </li>
+                    </div>
+
                     <table id="cohort-table" class="table table-striped tablesorter">
                         <thead><tr>
                             <th class="checkbox-col"><input type="checkbox" class="select-all" title="select-all"/></th>
                             <th class="name-col">Cohort Name</th>
-                            <th class="sample-col"># of Samples</th>
-                            <th class="owner-col">Owner</th>
+                            <th class="sample-col"># Samples</th>
+                            <th># Patients</th>
+                            <th class="owner-col">Ownership</th>
+                            <th>Shared With</th>
                             <th class="date-col">Last Modified</th>
                         </tr></thead>
                         <tbody>
                         {% for cohort in cohorts %}
+                        {% if cohort.owner.is_superuser == False %}
                             <tr>
                                 <td class="checkbox-col"><input type="checkbox" name="id" value="{{ cohort.id }}" title="{{ cohort.name }} Checkbox" aria-label="cohort-checkbox"/></td>
                                 <td class="name-col"><a href="{% url 'cohort_details' cohort.id %}">{{ cohort.name }}</a></td>
-                                <td class="sample-col">{{ cohort.num_patients }}</td>
-                                <td class="owner-col">{{ cohort.owner.email }}</td>
+                                <td class="sample-col">{#{ cohort.num_patients }#} {{ cohort.sample_size }} </td>
+                                <td>{{ cohort.patient_size }}</td>
+                                <td class="owner-col">
+                                    {% if cohort.perm == 'Owner' %}
+                                        You
+                                    {% else %}
+                                        {{cohort.owner.first_name}} {{cohort.owner.last_name}}
+                                    {% endif %}
+                                </td>
+                                <td class="share-col">
+                                    {% if cohort.shared_with_users|length %}
+                                        ( <a data-toggle="modal" data-target="#share-cohorts-modal" class="shared">{{cohort.shared_with_users|length}}</a> )
+                                    {% else %}
+                                        ( 0 )
+                                    {% endif %}
+                                </td>
                                 <td class="date-col">{{ cohort.last_date_saved|date:"SHORT_DATETIME_FORMAT" }}</td>
                             </tr>
+                        {% endif %}
                         {% endfor %}
                         </tbody>
                     </table>
+                {% else %}
+                    <div class="panel-body">
+                        <br>
+                        <p class="center">You don't have any cohorts created yet. <br><a href="{% url 'cohort' %}" class="btn btn-link">Create Your First Cohort</a></p>
+                        <br>
+                    </div>
                 {% endif %}
             </div>
             <div role="tabpanel" class="tab-pane" id="public-cohorts-list">
                 <div class="page-action-group">
-                    <button class="btn btn-default">New Workbook</button>
-                    <span class="separator"></span>
-                    <button id='delete-cohorts' type="button" class="btn btn-info" data-toggle="modal" data-target="#delete-cohorts-modal" aria-label="delete-cohorts" role="button" aria-expanded="true">
-                        <i class="fa fa-trash"></i>
-                        Delete
-                    </button>
-                    <button id="cohort-sets" type="button" class="btn btn-info" data-toggle="modal" data-target="#union-modal" aria-label="set-logic" role="button" aria-expanded="true">
-                        Set Operations
-                    </button>
-                    <button class="btn btn-info" id="share-cohorts-btn" type="button" data-toggle="modal" data-target="#share-cohorts-modal" aria-label="share-cohorts" role="button" aria-expanded="true">
-                        <i class="fa fa-share-alt"></i>
-                        Share
-                    </button>
+                    <li role="menuitem"><button class="btn btn-default">New Workbook</button></li>
+                    <li class="separator"></li>
+                    <li role="menuitem"><button class="btn btn-info">Set Operations</button></li>
                 </div>
+                {% if cohorts %}
+                    <table id="public-cohort-table" class="table table-striped tablesorter">
+                        <thead><tr>
+                            <th class="checkbox-col"><input type="checkbox" class="select-all" title="select-all"/></th>
+                            <th class="name-col">Cohort Name</th>
+                            <th class="sample-col"># Samples</th>
+                            <th># Patients</th>
+                            <th class="date-col">Last Modified</th>
+                        </tr></thead>
+                        <tbody>
+                        {% for cohort in cohorts %}
+                            {% if cohort.owner.is_superuser == True %}
+                            <tr>
+                                <td class="checkbox-col"><input type="checkbox" name="id" value="{{ cohort.id }}" title="{{ cohort.name }} Checkbox" aria-label="cohort-checkbox"/></td>
+                                <td class="name-col"><a href="{% url 'cohort_details' cohort.id %}">{{ cohort.name }}</a></td>
+                                <td class="sample-col">{#{ cohort.num_patients }#} {{ cohort.sample_size }} </td>
+                                <td>{{ cohort.patient_size }}</td>
+                                <td class="date-col">{{ cohort.last_date_saved|date:"SHORT_DATETIME_FORMAT" }}</td>
+                            </tr>
+                            {% endif %}
+
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                {% endif %}
             </div>
         </div>
     </div>
@@ -141,16 +187,14 @@
                     <h4 class="modal-title" id="union-header">New Cohorts</h4>
                 </div>
                 <form id="set-op-cohort" method="POST" action="{% url 'set_operation' %}" class="">
-                    <div class="modal-body form-horizontal">
+                    <div class="modal-body">
                         <div class="form-group">
-                            <label class="col-md-2" for="new-cohort-name">Cohort Name</label>
-                            <div class="col-md-10">
-                                <input type="text" class="form-control" id="new-cohort-name" name="name" placeholder="Enter name for new cohort">
-                            </div>
+                            <label for="new-cohort-name">Cohort Name</label>
+                            <input type="text" class="form-control" id="new-cohort-name" name="name" placeholder="Enter name for new cohort">
                         </div>
                         <div class="form-group">
-                            <label class="col-md-2" for="operation">Set Operation</label>
-                            <div class="col-md-10">
+                            <label for="operation">Set Operation</label>
+                            <div>
                                 <select name="operation" id="operation" class="form-control">
                                     <option value="union">Union</option>
                                     <option value="intersect">Intersection</option>
@@ -159,33 +203,33 @@
                             </div>
                         </div>
                         <div class="form-group set-control">
-                            <label class="col-md-2" for="selected-ids">Selected Cohorts</label>
-                            <div class="col-md-10">
+                            <label for="selected-ids">Selected Cohorts</label>
+                            <div>
                                 <div class="form-control-static" id="selected-ids">
 
                                 </div>
                                 <div class="cohort-search-div">
-                                    <a href="" class="add-cohort btn btn-primary"><i class="fa fa-plus"></i></a>
+                                    <a class="add-cohort btn btn-link"><i class="fa fa-plus"></i> Add A Cohort</a>
                                     <input type="text" class="search-cohorts form-control" aria-label="Cohort Search Box"/>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group complement-control">
-                            <label class="col-md-2" for="base-cohort">Base Cohort</label>
-                            <div class="col-md-10">
+                            <label for="base-cohort">Base Cohort</label>
+                            <div>
                                 <p class="form-control-static" id="base-id"></p>
                                 <div class="cohort-search-div">
-                                    <a href="" class="add-cohort btn btn-primary"><i class="fa fa-plus"></i></a>
+                                    <a class="add-cohort btn btn-link"><i class="fa fa-plus"></i> Add A Cohort</a>
                                     <input type="text" class="search-cohorts form-control" aria-label="Cohort Search Box"/>
                                 </div>
                             </div>
                         </div>
                         <div class="form-group complement-control">
-                            <label class="col-md-2" for="subtract-cohorts">Subtracted Cohorts</label>
-                            <div class="col-md-10">
+                            <label for="subtract-cohorts">Subtracted Cohorts</label>
+                            <div>
                                 <p class="form-control-static" id="subtract-ids"></p>
                                 <div class="cohort-search-div">
-                                    <a href="" class="add-cohort btn btn-primary"><i class="fa fa-plus"></i></a>
+                                    <a class="add-cohort btn btn-link"><i class="fa fa-plus"></i> Add Cohort</a>
                                     <input type="text" class="search-cohorts form-control" aria-label="Cohort Search Box"/>
                                 </div>
                             </div>
@@ -194,8 +238,8 @@
                     </div>
                     <div class="modal-footer">
                         {% csrf_token %}
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                         <button type="submit" class="btn btn-primary">Okay</button>
+                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                     </div>
                 </form>
             </div>
@@ -217,8 +261,8 @@
                     </div>
                     <div class="modal-footer">
                         {% csrf_token %}
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                         <input type="submit" value="Delete" class="btn btn-primary" />
+                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                     </div>
                 </form>
             </div>
@@ -231,28 +275,40 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="share-cohort-header">Share Cohort</h4>
+                    <ul class="nav nav-tabs">
+                        <li role="presentation" class="active"><a data-target="#share-pane" data-toggle="tab" id="share-cohort-header">Share Cohort</a></li>
+                        <li role="presentation"><a data-target="#shared-with-pane" data-toggle="tab">Shared With</a></li>
+                    </ul>
+
                 </div>
-                <form id="share-cohort-form" method="POST" action="{% url 'share_cohorts' %}">
-                    <div class="modal-body">
-                        <p class="form-control-static selected-cohorts"></p>
-                        <label for="share-cohort-users">Please select the users you would like to share these cohorts with:</label>
-                        <select id="share-cohort-users" name="users" multiple="multiple" class="form-control">
-                            {% for user in user_list %}
-                            <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }} ({{ user.email }})</option>
-                            {% endfor %}
-                        </select>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="share-pane">
+                        <form id="share-cohort-form" method="POST" action="{% url 'share_cohorts' %}">
+                            <div class="modal-body">
+                                <label>Selected Cohorts</label>
+                                <p class="form-control-static selected-cohorts"></p>
+                                <label for="share-cohort-users">Please select the users you would like to share these cohorts with:</label>
+                                <select id="share-cohort-users" name="users" multiple="multiple" class="form-control" required>
+                                    {% for user in user_list %}
+                                    <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }} ({{ user.email }})</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                            <div class="modal-footer">
+                                {% csrf_token %}
+                                <input type="submit" value="Share Cohort" class="btn btn-primary" />
+                            </div>
+                        </form>
                     </div>
-                    <div class="modal-footer">
-                        {% csrf_token %}
-                        <input type="submit" value="Share Cohort" class="btn btn-primary" />
+                    <div class="tab-pane" id="shared-with-pane">
+                        <div class="modal-body">
+                            <table class="table table-striped"></table>
+                        </div>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-
-
     <!-- Create Plot Modal -->
     <div class="modal fade" id="create-generic-viz-modal" tabindex="-1" role="dialog" aria-labelledby="create-generic-viz-header" aria-hidden="true">
         <div class="modal-dialog">
@@ -305,7 +361,7 @@
                         <div class="form-group">
                             <label class="col-md-2" for="new-cohort-name">Cohort Name</label>
                             <div class="col-md-10">
-                                <input type="text" class="form-control" id="new-cohort-name" name="name" placeholder="Enter name for new cohort">
+                                <input type="text" class="form-control" id="new-cohort-name" name="name" placeholder="Enter name for new cohort" required>
                             </div>
                         </div>
                         <div class="form-group">
@@ -354,8 +410,8 @@
                     </div>
                     <div class="modal-footer">
                         {% csrf_token %}
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
                         <button type="submit" class="btn btn-primary">Okay</button>
+                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
                     </div>
                 </form>
             </div>
@@ -464,9 +520,10 @@
 
     <script type="text/javascript">
     var cohort_list = {{ cohorts_listing|safe }};
+    var shared_users = {{ shared_users|safe }};
     var base_api_url = '{{ base_api_url|safe }}';
     var base_url = '{{ base_url|safe }}';
     </script>
 {% endblock %}
 
-{% block js_file %}{% static 'js/user_landing.js' %}{% endblock %}
+{% block js_file %}{% static 'js/cohort_list.js' %}{% endblock %}
